--- a/package.json
+++ b/package.json
@@ -13,15 +13,18 @@
   "dependencies": {
     "@neondatabase/serverless": "^0.9.3",
     "@uidotdev/usehooks": "^2.4.1",
+    "chroma-js": "^2.4.2",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.30.10",
     "next": "14.2.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-select": "^5.8.0",
     "react-toastify": "^10.0.5",
     "tsx": "^4.10.0"
   },
   "devDependencies": {
+    "@types/chroma-js": "^2.4.4",
     "@types/node": "^20.12.11",
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.3.0",
