--- a/package.json
+++ b/package.json
@@ -11,28 +11,29 @@
     "db:migrate": "npx drizzle-kit generate && tsx ./src/drizzle/migrate.ts"
   },
   "dependencies": {
-    "@neondatabase/serverless": "^0.9.3",
+    "@neondatabase/serverless": "^0.10.4",
     "@uidotdev/usehooks": "^2.4.1",
-    "chroma-js": "^2.4.2",
-    "dotenv": "^16.4.5",
-    "drizzle-orm": "^0.30.10",
-    "next": "14.2.3",
-    "nextjs-toploader": "^1.6.12",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-select": "^5.8.0",
-    "react-toastify": "^10.0.5",
-    "tsx": "^4.10.0"
+    "chroma-js": "^3.1.2",
+    "dotenv": "^16.4.7",
+    "drizzle-orm": "^0.40.0",
+    "next": "15.2.2",
+    "nextjs-toploader": "^3.7.15",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-select": "^5.10.1",
+    "react-toastify": "^11.0.5",
+    "tsx": "^4.19.3"
   },
   "devDependencies": {
-    "@types/chroma-js": "^2.4.4",
-    "@types/node": "^20.12.11",
-    "@types/react": "^18.3.2",
-    "@types/react-dom": "^18.3.0",
-    "daisyui": "^4.11.1",
-    "drizzle-kit": "^0.21.1",
-    "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.3",
-    "typescript": "^5.4.5"
+    "@tailwindcss/postcss": "^4.0.13",
+    "@types/chroma-js": "^3.1.1",
+    "@types/node": "^22.13.10",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
+    "daisyui": "^5.0.2",
+    "drizzle-kit": "^0.30.5",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.0.13",
+    "typescript": "^5.8.2"
   }
 }
