--- a/package.json
+++ b/package.json
@@ -26,15 +26,17 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.0.13",
+    "@tailwindcss/postcss": "^4.0.14",
     "@types/chroma-js": "^3.1.1",
     "@types/node": "^22.13.10",
+    "@types/pg": "^8.11.11",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
-    "daisyui": "^5.0.2",
+    "daisyui": "^5.0.4",
     "drizzle-kit": "^0.30.5",
+    "pg": "^8.14.0",
     "postcss": "^8.5.3",
-    "tailwindcss": "^4.0.13",
+    "tailwindcss": "^4.0.14",
     "typescript": "^5.8.2"
   }
 }
