--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
 DEV_DB_URL=postgres://ari:123@localhost:5432/drizzle_library_db
-DB_URL=postgresql://neondb_owner:L5SNfa8kQFrD@ep-misty-bush-a1sw28at.ap-southeast-1.aws.neon.tech/library_app?sslmode=require
-
+DB_URL=postgresql://neondb_owner:L5SNfa8kQFrD@ep-misty-bush-a1sw28at-pooler.ap-southeast-1.aws.neon.tech/drizzle-library?sslmode=require
