--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "db:generate": "npx drizzle-kit generate:pg --schema ./src/drizzle/schema.ts --out=./src/drizzle/migrations",
-    "db:migrate": "npx drizzle-kit generate && tsx ./src/drizzle/migrate.ts"
+    "dev:db:generate": "npx drizzle-kit generate --config=drizzle.dev.config.ts",
+    "dev:db:migrate": "npx drizzle-kit migrate --config=drizzle.dev.config.ts",
+    "prod:db:generate": "npx drizzle-kit generate --config=drizzle.prod.config.ts",
+    "prod:db:migrate": "npx drizzle-kit migrate --config=drizzle.prod.config.ts"
   },
   "dependencies": {
     "@neondatabase/serverless": "^0.10.4",
@@ -20,9 +22,7 @@
     "nextjs-toploader": "^3.7.15",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-select": "^5.10.1",
     "react-toastify": "^11.0.5",
-    "tsx": "^4.19.3",
     "zod": "^3.24.2"
   },
   "devDependencies": {
