--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.43.1",
     "next": "15.3.1",
+    "next-safe-action": "^7.10.8",
     "nextjs-toploader": "^3.8.16",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-toastify": "^11.0.5",
-    "zod": "^3.24.3"
+    "zod": "^3.24.3",
+    "zod-form-data": "^2.0.7"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.5",
