--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-toastify": "^11.0.5",
+    "slugify": "^1.6.6",
     "zod": "^3.24.3",
     "zod-form-data": "^2.0.7"
   },
@@ -35,7 +36,7 @@
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.3",
     "daisyui": "^5.0.35",
-    "drizzle-kit": "^0.31.0",
+    "drizzle-kit": "^0.31.1",
     "pg": "^8.15.6",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.1.5",
