--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^19.1.0",
     "react-toastify": "^11.0.5",
     "slugify": "^1.6.6",
+    "use-debounce": "^10.0.4",
     "zod": "^3.24.3",
     "zod-form-data": "^2.0.7"
   },
