--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@neondatabase/serverless": "^1.0.0",
     "@uidotdev/usehooks": "^2.4.1",
     "chroma-js": "^3.1.2",
+    "clsx": "^2.1.1",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.43.1",
     "next": "15.3.1",
@@ -25,6 +26,7 @@
     "react-dom": "^19.1.0",
     "react-toastify": "^11.0.5",
     "slugify": "^1.6.6",
+    "tailwind-merge": "^3.2.0",
     "use-debounce": "^10.0.4",
     "zod": "^3.24.3",
     "zod-form-data": "^2.0.7"
